tests/sources/invalid/control_flow/unterminated_if_body.fire
// An `if` with a braceless body that has no statement at all before EOF.
int32 main() {  //~ ERROR FS-PARSE-0010 @14
    bool cond = true;
    if (cond)
